--- a/fitness-app/src/styles.css
+++ b/fitness-app/src/styles.css
@@ -48,10 +48,24 @@ body {
   padding: .25rem;
 }
 
-.nav li.active {
+/* .nav li.active {
   background-color: #333;
 }
 
 .nav li:hover {
+  background-color: #656;
+} */
+
+.card {
+  background-color: #252525;
+  text-decoration: none;
+  list-style: none;
+}
+
+.button {
+  align-items: center;
+  align-self: auto;
+  margin: .8%;
+  font-size: large;
   background-color: #656;
 }
